# python-project-template

./: .coverage  .coveragerc  .gitignore  .pdm.toml  .pre-commit-config.yaml  LICENSE  LICENSE.md  README.md  flake.nix  pyproject.toml  tox.ini
.github/workflows/: lint-test.yml
module_name/: __init__.py  __main__.py
tests/: test_module.py
