[project]
name = "module_name"
version = "0.0.0"
description = ""
authors = [
    {name = "AbooMinister25", email = "aboominister@gmail.com"},
]
dependencies = []
requires-python = ">=3.7"
license = {text = "MIT"}
[project.optional-dependencies]

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"

[tool]
[tool.pdm]
[tool.pdm.dev-dependencies]
test = [
    "pytest>=7.1.3",
]
format = [
    "isort>=5.10.1",
    "black>=22.8.0",
]
lint = [
    "flake8>=5.0.4",
    "pyright>=1.1.269",
    "flake8-annotations>=2.9.1",
    "flake8-docstrings>=1.6.0",
    "flake8-future-annotations>=0.0.5",
]
repl = [
    "ipython>=7.34.0",
]
coverage = [
    "coverage>=6.4.4",
]
precommit = [
    "pre-commit>=2.20.0",
]

[tool.pdm.scripts]
format = { shell = "black . && isort ." }
lint = { shell = "pyright && flake8" }
test = "pytest ."
coverage = { shell = "coverage run -m pytest && coverage report && coverage xml" }
precommit = { shell = "pdm run pre-commit run --all-files" }
all = { composite = ["format", "lint", "test", "coverage"] }

[tool.black]
line-length = 100

[tool.isort]
profile = "black"

[tool.pyright]
include = ["module_name/**/*.py"]
strict = ["module_name/**/*.py"]

[tool.pytest.ini_options]
testpaths = [
    "tests"
]